# tmvec

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg
notebooks/: train-test-data-prep.ipynb
src/tmvec/: cli.py  dataset.py  model.py  utils.py
src/tmvec/tests/: test_embeddings.py  test_model.py
tmvec/: __init__.py  cli.py  dataset.py  embedding.py  vectorizer.py
