[build-system]
requires = [
  "setuptools>=80",
  "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "tmvec"
version = "1.1.0"
description = "Quick structure comparison via protein embeddings"
readme = "README.md"
requires-python = ">=3.6"
license = "BSD-3-Clause"
keywords = [
  "bioinformatics",
  "protein",
  "structure",
  "embeddings"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Scientific/Engineering :: Visualization",
  "Operating System :: OS Independent"
]
authors = [
  { name = "Valentyn Bezshapkin", email = "valentyn.bezshapkin@micro.biol.ethz.ch" }
]
urls = { "Homepage" = "https://github.com/valentynbez/tmvec" }

dependencies = [
  "numpy",
  "pandas",
  "torch",
  "lightning",
  "pysam",
  "transformers",
  "SentencePiece",
  "faiss-cpu",
  "optimum"
]

[project.optional-dependencies]
embed = [
  "h5py"
]
deepblast = [
  "deepblast"
]
dev = [
  "wandb",
  "pre-commit",
  "matplotlib",
  "pytest"
]
"scikit-bio" = [
  "deepblast",
  "scikit-bio @ git+https://github.com/scikit-bio/scikit-bio"
]

[project.scripts]
tmvec = "tmvec.cli:main"
embed = "tmvec.embed:main"

[tool.ruff]
line-length = 120
